src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Closed_Won_Count__c</fullName>
        <inlineHelpText>PARENT TOTAL = Contains the count of closed won for all child accounts for this parent account</inlineHelpText>
        <label>Account Closed Won Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_ID_Copy__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>This is a copy of the account ID for system administrator use only.</inlineHelpText>
        <label>Account ID Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>New Formula Field to display Account Owner - Not &quot;changeable/editable&quot;</description>
        <formula>Owner.LastName &amp; &quot;, &quot; &amp;  Owner.FirstName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity__c</fullName>
        <formula>IF(Active_Opps__c &gt;= 1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This account has at least one active opportunity.</inlineHelpText>
        <label>Active Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Opps__c</fullName>
        <inlineHelpText>A count of all open opportunities on an account.</inlineHelpText>
        <label>Active Opps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Used during data migration from old Opportunity. For information only until this field can be removed.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Year_Start__c</fullName>
        <description>This field contains the month of the benefit year start for this account</description>
        <inlineHelpText>Enter the month of the benefit years start for this account.</inlineHelpText>
        <label>Benefit Year Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months_of_the_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Account must be a Broker/Consultant Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker/Consultant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brokered Accounts</relationshipLabel>
        <relationshipName>BrokerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the contact at the broker&apos;s office?</inlineHelpText>
        <label>Broker Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The chosen Contact must belong to a Broker/Consultant Account.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Brokered Accounts</relationshipLabel>
        <relationshipName>BrokeredAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_s__c</fullName>
        <label>Broker(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABD</fullName>
                </value>
                <value>
                    <fullName>Alliant Insurance Services Inc</fullName>
                </value>
                <value>
                    <fullName>AmWins Group Inc</fullName>
                </value>
                <value>
                    <fullName>Aon Hewitt</fullName>
                </value>
                <value>
                    <fullName>Arthur J. Gallagher &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Barney &amp; Barney</fullName>
                </value>
                <value>
                    <fullName>BB&amp;T Insurance Services Inc.</fullName>
                </value>
                <value>
                    <fullName>Brown &amp; Brown Inc.</fullName>
                </value>
                <value>
                    <fullName>CNinsure Inc.</fullName>
                </value>
                <value>
                    <fullName>Confie Seguros Holding Co.</fullName>
                </value>
                <value>
                    <fullName>Cooper Gay Swett &amp; Crawford</fullName>
                </value>
                <value>
                    <fullName>Frenkel</fullName>
                </value>
                <value>
                    <fullName>HaysB</fullName>
                </value>
                <value>
                    <fullName>Holmes Murphy</fullName>
                </value>
                <value>
                    <fullName>Hub International Ltd</fullName>
                </value>
                <value>
                    <fullName>Insphere Insurance Solutions</fullName>
                </value>
                <value>
                    <fullName>Jardine Lloyd Thompson Group PLC</fullName>
                </value>
                <value>
                    <fullName>Lockton Companies LLC</fullName>
                </value>
                <value>
                    <fullName>Marsh &amp; McLennan</fullName>
                </value>
                <value>
                    <fullName>Meadowbrook Insurance Group Inc.</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
                <value>
                    <fullName>NFP</fullName>
                </value>
                <value>
                    <fullName>Precept</fullName>
                </value>
                <value>
                    <fullName>Proinsurance</fullName>
                </value>
                <value>
                    <fullName>Sequoia</fullName>
                </value>
                <value>
                    <fullName>The Leavitt Group</fullName>
                </value>
                <value>
                    <fullName>USI Holdings Corp</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo Insurance Services</fullName>
                </value>
                <value>
                    <fullName>Willis Towers Watson</fullName>
                </value>
                <value>
                    <fullName>Woodruff Sawyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRD__c</fullName>
        <description>Client Relationship Director</description>
        <inlineHelpText>Client Relationship Director</inlineHelpText>
        <label>CRD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Priorities__c</fullName>
        <label>Client Priorities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Relationship_Input__c</fullName>
        <description>This represents whether we have this client under contract for any of our services.  Yes, is a an &quot;Existing Client&quot;.  No, is a &quot;Potential Client&quot;</description>
        <inlineHelpText>This represents whether we have this client under contract for any of our services.  Yes, is a an &quot;Existing Client&quot;.  No, is a &quot;Potential Client&quot;</inlineHelpText>
        <label>Client Relationship Input</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Relationship__c</fullName>
        <formula>BLANKVALUE(Text(Parent.Parent.Parent.Parent.Parent.Client_Relationship_Input__c), 
BLANKVALUE(Text(Parent.Parent.Parent.Parent.Client_Relationship_Input__c), 
BLANKVALUE(Text(Parent.Parent.Parent.Client_Relationship_Input__c), 
BLANKVALUE(Text(Parent.Parent.Client_Relationship_Input__c), 
BLANKVALUE(Text(Parent.Client_Relationship_Input__c), 
(Text(Client_Relationship_Input__c)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field indicates if account is an existing or potential customer. (If any account in the hierarchy has a Closed Won opportunity then all accounts in the hierarchy are Existing Customers.</inlineHelpText>
        <label>Client Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Priorities__c</fullName>
        <label>Reason for Joining:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Contract Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Count__c</fullName>
        <inlineHelpText>Contains the number of opportunities on this account with a status of closed won</inlineHelpText>
        <label>Closed Won Count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, AM_Closed Won_100%</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_Lives__c</fullName>
        <formula>Near_Site_Opportunity__r.Committed_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Total Number of Committed Lives at the associated Opportunity</inlineHelpText>
        <label>Opp Committed Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Monthly_Value__c</fullName>
        <formula>IF( Probability__c = 1,  Number_of_Lives__c *  PEPM__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated ONLY if the Account is Closed Won.
Number of Lives * PEPM</inlineHelpText>
        <label>Committed Monthly Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo.</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dependents_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dependents Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start__c</fullName>
        <description>This field contains the fiscal year start for the account</description>
        <inlineHelpText>Enter the month the fiscal year begins for the account</inlineHelpText>
        <label>Fiscal Year Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months_of_the_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any given week or month sales teams may focus on approximately 15 accounts. Some new accounts may be added to the focus group, others may go back into the universe. The Focus Group field is for defining the focus group accounts for use with creating filters for reporting.</description>
        <inlineHelpText>Check if this is a focus group account.</inlineHelpText>
        <label>Focus Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Funding__c</fullName>
        <label>Insurance Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Funded</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Locations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <description>Enter the URL for the Company Linkedin Page</description>
        <label>Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <description>Date the the Account first went live.</description>
        <label>Account Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <inlineHelpText>This field contains all distinct locations on all product line items on all opportunities..</inlineHelpText>
        <label>Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Suspend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suspend all marketing activity when checked</description>
        <label>Marketing Suspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_Site_Neighborhood__c</fullName>
        <label>Near-Site Neighborhood</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>237 (Middle)</fullName>
                </value>
                <value>
                    <fullName>Arlington Heights</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin (Central / Downtown)</fullName>
                </value>
                <value>
                    <fullName>Austin (North)</fullName>
                </value>
                <value>
                    <fullName>Austin (South)</fullName>
                </value>
                <value>
                    <fullName>Austin (West)</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berryessa (880 East)</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Broomfield</fullName>
                </value>
                <value>
                    <fullName>Bryant Park</fullName>
                </value>
                <value>
                    <fullName>Burbank</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Chandler</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>Chicago (Downtown)</fullName>
                </value>
                <value>
                    <fullName>Columbus Circle</fullName>
                </value>
                <value>
                    <fullName>Culver City</fullName>
                </value>
                <value>
                    <fullName>Deerfield</fullName>
                </value>
                <value>
                    <fullName>Denver (Cherry Creek)</fullName>
                </value>
                <value>
                    <fullName>Denver (Highlands Ranch)</fullName>
                </value>
                <value>
                    <fullName>Denver Tech Center</fullName>
                </value>
                <value>
                    <fullName>Design District (SF)</fullName>
                </value>
                <value>
                    <fullName>Downtown (Boston)</fullName>
                </value>
                <value>
                    <fullName>Downtown (Dallas)</fullName>
                </value>
                <value>
                    <fullName>Downtown (LA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Near_Site_Neighborhood_old__c</fullName>
        <label>Near-Site Neighborhood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>237 (Middle)</fullName>
                </value>
                <value>
                    <fullName>Arlington Heights</fullName>
                </value>
                <value>
                    <fullName>Austin (Central / Downtown)</fullName>
                </value>
                <value>
                    <fullName>Austin (North)</fullName>
                </value>
                <value>
                    <fullName>Austin (South)</fullName>
                </value>
                <value>
                    <fullName>Austin (West)</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Berryessa (880 East)</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Burbank</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Chandler</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>Chicago (Downtown)</fullName>
                </value>
                <value>
                    <fullName>Dallas Forth Worth</fullName>
                </value>
                <value>
                    <fullName>Deerfield</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>El Segundo</fullName>
                </value>
                <value>
                    <fullName>Englewood Cliffs</fullName>
                </value>
                <value>
                    <fullName>Fort Collins</fullName>
                </value>
                <value>
                    <fullName>Foster City</fullName>
                </value>
                <value>
                    <fullName>Fremont</fullName>
                </value>
                <value>
                    <fullName>Hoffman Estates</fullName>
                </value>
                <value>
                    <fullName>Hollywood</fullName>
                </value>
                <value>
                    <fullName>Irvine</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Lake Forest (IL)</fullName>
                </value>
                <value>
                    <fullName>Las Colinas</fullName>
                </value>
                <value>
                    <fullName>Lonetree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Near_Site_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Opportunity (Clinic) to which this Account is associated.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Accounts</relationshipLabel>
        <relationshipName>NearSiteAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step (Acct)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Lives__c</fullName>
        <inlineHelpText>The total number of lives used to calculate the amount invoiced to client (e.g. PEPM, revenue calculation)</inlineHelpText>
        <label>Number of Eligible Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Plus_Acct_Closed_Won_Count__c</fullName>
        <formula>Closed_Won_Count__c + Account_Closed_Won_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contains the total closed won count for all opportunities under this account in addition to any closed won opportunities on child accounts in the hierarchy.</inlineHelpText>
        <label>Opp Plus Acct Closed Won Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_NS_OS__c</fullName>
        <label>Opportunity Type (NS / OS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nearsite</fullName>
                    <default>true</default>
                    <label>Nearsite</label>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEPM__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &quot;Office Location&quot;, 46, 0)</defaultValue>
        <inlineHelpText>The expected monthly value of each member</inlineHelpText>
        <label>PEPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_On_Site_Revenue__c</fullName>
        <label>Potential On-Site Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>The Probability associated with the Stage. This field is automatically populated based on the Stage selected.</inlineHelpText>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_formula__c</fullName>
        <formula>CASE( text(Stage__c) ,
&quot;Pre-Lead&quot;, 0/10,
&quot;Prospect&quot;, 0/10,&quot;Proposal&quot;, 1/10,&quot;Finalist&quot;, 1/4,&quot;Negotiation&quot;, 3/4,&quot;Contracting&quot;, 9/10,
&quot;Closed Won&quot;, 1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <inlineHelpText>This field contains all distinct products on all opportunities associated with this account.</inlineHelpText>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Employee_Growth__c</fullName>
        <label>Projected Annual Employee Growth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RFP_Start_Date__c</fullName>
        <label>RFP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Central CT</fullName>
                </value>
                <value>
                    <fullName>Central Florida</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Coastal CT</fullName>
                </value>
                <value>
                    <fullName>Conneticut</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>North Florida</fullName>
                </value>
                <value>
                    <fullName>North NJ</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>NY South</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Winston-Salem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Near_Site_Opportunity__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevID__c</fullName>
        <externalId>true</externalId>
        <label>RevID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>The Account&apos;s Stage in the Sales Process</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>